[package]
name = "map-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.23.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.3"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"